--- a/src/NextPage/Properties/Resources.resx
+++ b/src/NextPage/Properties/Resources.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddBookPageTitle" xml:space="preserve">
+    <value>Add a new book</value>
+    <comment>Translate</comment>
+  </data>
   <data name="AppTitle" xml:space="preserve">
     <value>Next Page</value>
     <comment>Don't translate</comment>
@@ -124,10 +128,6 @@
   <data name="Author" xml:space="preserve">
     <value>Author:</value>
     <comment>Translate</comment>
-  </data>
-  <data name="BookPageTitle" xml:space="preserve">
-    <value>Book: {0}</value>
-    <comment>Translate with parameter</comment>
   </data>
   <data name="Books" xml:space="preserve">
     <value>Books</value>
@@ -148,6 +148,10 @@
   <data name="Description" xml:space="preserve">
     <value>Description:</value>
     <comment>Translate</comment>
+  </data>
+  <data name="EditBookPageTitle" xml:space="preserve">
+    <value>Book: {0}</value>
+    <comment>Translate with parameter</comment>
   </data>
   <data name="Genre" xml:space="preserve">
     <value>Genre:</value>
@@ -218,6 +222,10 @@
     <comment>Translate</comment>
   </data>
   <data name="PublicationYear" xml:space="preserve">
+    <value>Publication year:</value>
+    <comment>Translate</comment>
+  </data>
+  <data name="PublicationYearWithParameter" xml:space="preserve">
     <value>Publication year: {0}</value>
     <comment>Translate with parameter</comment>
   </data>
