--- a/src/NextPage/Properties/Resources.resx
+++ b/src/NextPage/Properties/Resources.resx
@@ -125,24 +125,58 @@
     <value>Next Page</value>
     <comment>Don't translate</comment>
   </data>
+  <data name="AreYouSureDelete" xml:space="preserve">
+    <value>Are you sure want to delete this book? This cannot be undone.</value>
+    <comment>Translate</comment>
+  </data>
+  <data name="AreYouSureDiscard" xml:space="preserve">
+    <value>Are you sure want to discard your changes to this book?</value>
+    <comment>Translate</comment>
+  </data>
   <data name="Author" xml:space="preserve">
     <value>Author:</value>
     <comment>Translate</comment>
   </data>
+  <data name="BookErrorMessageFormat" xml:space="preserve">
+    <value>There is a problem with the book you tried to save. Please correct the following error(s):
+
+{0}</value>
+    <comment>Translate with parameter</comment>
+  </data>
   <data name="Books" xml:space="preserve">
     <value>Books</value>
+    <comment>Translate</comment>
+  </data>
+  <data name="ButtonCancel" xml:space="preserve">
+    <value>Cancel</value>
     <comment>Translate</comment>
   </data>
   <data name="ButtonDelete" xml:space="preserve">
     <value>Delete</value>
     <comment>Translate</comment>
   </data>
+  <data name="ButtonDiscard" xml:space="preserve">
+    <value>Discard</value>
+    <comment>Translate</comment>
+  </data>
   <data name="ButtonEdit" xml:space="preserve">
     <value>Edit</value>
     <comment>Translate</comment>
   </data>
+  <data name="ButtonOK" xml:space="preserve">
+    <value>OK</value>
+    <comment>Translate</comment>
+  </data>
   <data name="ButtonSave" xml:space="preserve">
     <value>Save</value>
+    <comment>Translate</comment>
+  </data>
+  <data name="ConfirmDelete" xml:space="preserve">
+    <value>Confirm delete</value>
+    <comment>Translate</comment>
+  </data>
+  <data name="ConfirmDiscard" xml:space="preserve">
+    <value>Confirm discard</value>
     <comment>Translate</comment>
   </data>
   <data name="Description" xml:space="preserve">
@@ -152,6 +186,25 @@
   <data name="EditBookPageTitle" xml:space="preserve">
     <value>Book: {0}</value>
     <comment>Translate with parameter</comment>
+  </data>
+  <data name="EmptyAuthorValidationMessage" xml:space="preserve">
+    <value>- The book must have an Author
+</value>
+    <comment>Translate</comment>
+  </data>
+  <data name="EmptyGenreValidationMessage" xml:space="preserve">
+    <value>- The book must have a Genre
+</value>
+    <comment>Translate</comment>
+  </data>
+  <data name="EmptyTitleValidationMessage" xml:space="preserve">
+    <value>- The book must have a Title
+</value>
+    <comment>Translate</comment>
+  </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+    <comment>Translate</comment>
   </data>
   <data name="Genre" xml:space="preserve">
     <value>Genre:</value>
@@ -215,6 +268,11 @@
   </data>
   <data name="HomePageTitle" xml:space="preserve">
     <value>Home</value>
+    <comment>Translate</comment>
+  </data>
+  <data name="InvalidYearValidationMessage" xml:space="preserve">
+    <value>- The book must have a valid year e.g. 1999
+</value>
     <comment>Translate</comment>
   </data>
   <data name="NoBooksMessage" xml:space="preserve">
