Make description an optional field

--- a/src/NextPage/Properties/Resources.resx
+++ b/src/NextPage/Properties/Resources.resx
@@ -180,7 +180,7 @@
     <comment>Translate</comment>
   </data>
   <data name="Description" xml:space="preserve">
-    <value>Description:</value>
+    <value>Description (optional):</value>
     <comment>Translate</comment>
   </data>
   <data name="EditBookPageTitle" xml:space="preserve">
