Add initial README

--- a/src/NextPage/Properties/Resources.resx
+++ b/src/NextPage/Properties/Resources.resx
@@ -235,7 +235,7 @@
     <comment>Translate</comment>
   </data>
   <data name="GenreCrimeAndMystery" xml:space="preserve">
-    <value>Crime and myserty</value>
+    <value>Crime and mystery</value>
     <comment>Translate</comment>
   </data>
   <data name="GenreFantasy" xml:space="preserve">
